<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>com.learn</groupId>

   <artifactId>CheckstylePmdEmma</artifactId>

   <packaging>jar</packaging>

   <version>1.0</version>

   <name>${project.artifactId}</name>

   <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss</maven.build.timestamp.format>
    <maven.test.skip>false</maven.test.skip>
    <maven.javadoc.skip>true</maven.javadoc.skip>
    <java.version>21</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release><!-- Java 9 and Beyond -->
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <!-- Other than boot -->
  </properties>

   <dependencies>

      <dependency>
         <groupId>emma</groupId>

         <artifactId>emma</artifactId>

         <version>2.0.5312</version>

         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>com.ibm.icu</groupId>

         <artifactId>icu4j</artifactId>

         <version>4.0.1</version>

         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>junit</groupId>

         <artifactId>junit</artifactId>

         <version>4.7</version>

         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>

               <artifactId>maven-pmd-plugin</artifactId>

               <version>2.5</version>
            </plugin>
         </plugins>
      </pluginManagement>

      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-jar-plugin</artifactId>

            <configuration>
               <archive>
                  <addMavenDescriptor>false</addMavenDescriptor>
               </archive>
            </configuration>
         </plugin>

         <plugin>
            <artifactId>maven-resources-plugin</artifactId>

            <configuration>
               <encoding>UTF-8</encoding>
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-checkstyle-plugin</artifactId>

            <version>2.5</version>

            <configuration>
               <enableRulesSummary>false</enableRulesSummary>
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-pmd-plugin</artifactId>

            <version>2.5</version>
         </plugin>

         <plugin>
            <groupId>org.sonatype.maven.plugin</groupId>

            <artifactId>emma-maven-plugin</artifactId>

            <version>1.2</version>

            <inherited>true</inherited>

            <executions>
               <execution>
                  <phase>process-classes</phase>

                  <goals>
                     <goal>instrument</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>

         <plugin>
            <groupId>org.codehaus.mojo</groupId>

            <artifactId>cobertura-maven-plugin</artifactId>

            <version>2.4</version>

            <executions>
               <execution>
                  <goals>
                     <goal>clean</goal>

                     <goal>check</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-surefire-plugin</artifactId>

            <inherited>true</inherited>

            <configuration>
               <skip>false</skip>

               <testFailureIgnore>true</testFailureIgnore>

               <forkMode>once</forkMode>

               <reportFormat>xml</reportFormat>

               <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <reporting>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-surefire-report-plugin</artifactId>

            <version>2.5</version>

            <configuration>
               <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=256m</argLine>

               <disableXmlReport>true</disableXmlReport>
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-checkstyle-plugin</artifactId>

            <version>2.5</version>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>

            <artifactId>maven-pmd-plugin</artifactId>

            <version>2.5</version>
         </plugin>

         <plugin>
            <groupId>org.sonatype.maven.plugin</groupId>

            <artifactId>emma-maven-plugin</artifactId>

            <version>1.2</version>

            <inherited>true</inherited>
         </plugin>

         <plugin>
            <groupId>org.codehaus.mojo</groupId>

            <artifactId>cobertura-maven-plugin</artifactId>

            <version>2.4</version>
         </plugin>

         <plugin>
            <groupId>org.codehaus.mojo</groupId>

            <artifactId>surefire-report-maven-plugin</artifactId>

            <inherited>true</inherited>
         </plugin>
      </plugins>
   </reporting>
</project>
